# aoc_2022

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
aoc01/src/: main.rs
aoc02/src/: main.rs
input/: aoc05_1.txt  aoc05_2.txt  aoc11.txt  aoc14.txt  aoc15.txt  aoc16.txt  aoc16_test.txt
src/: main01.cpp  main02.cpp  main03.cpp  main04.cpp  main05.cpp  main06.cpp  main07.cpp  main08.cpp  main09.cpp  main10.cpp  main11.cpp  main12.cpp  main13.cpp  main14.cpp  main15.cpp  main16.cpp  main17.cpp
